--- a/board-style.css
+++ b/board-style.css
@@ -1,102 +1,19 @@
-/*
-NAVY #001f3f
-BLUE #0074D9
-AQUA #7FDBFF
-TEAL #39CCCC
-OLIVE #3D9970
-GREEN #2ECC40
-LIME #01FF70
-YELLOW #FFDC00
-ORANGE #FF851B
-RED #FF4136
-MAROON #85144b
-FUCHSIA #F012BE
-PURPLE #B10DC9
-BLACK #111111
-GRAY #AAAAAA
-SILVER #DDDDDD
-*/
-
-.tak-board {
-	width: 100%;
-	height: 100%;
+.display-table {
 	display: table;
 }
-
-.tak-row {
+.display-table-row {
 	display: table-row;
 }
-
-/*.tak-row, .tak-square {
-	margin: 0;
-	padding: 0;
-}*/
-
-.tak-square {
-	/*float: left;*/
-	/*background-color: #DDDDDD;*/
+.display-table-cell {
 	display: table-cell;
 }
-
-.tak-square-table {
-	height: 100%;
-	width: 100%;
-	display: table;
-}
-.square-pieces {
+.display-table-footer-group {
 	display: table-footer-group;
-	height: 1px;
-
 }
 
-.square-empty-space {
-	min-height: 1px;
+.width-height-100 {
+	width: 100%;
+	height: 100%;
 }
 
-.tak-row.even .tak-square.even {
-	background-color: #DDDDDD;
-}
-
-.tak-row.odd .tak-square.odd {
-	background-color: #DDDDDD;
-}
-
-.tak-piece.owned-by-o {
-	background-color: #0074D9;
-}
-.tak-piece.owned-by-x {
-	background-color: #01FF70;
-}
-
-/* piece sizes */
-.tak-piece {
-	height: 15%;
-	margin: 1px;
-}
-
-
-/* square sizes */
-.tak-board.size-8 .tak-square {
-	width: 12.5%;
-	height: 12.5%;
-}
-.tak-board.size-7 .tak-square {
-	width: 14.285714286%;
-	height: 14.285714286%;
-}
-.tak-board.size-6 .tak-square {
-	width: 16.666666667%;
-	height: 16.666666667%;
-}
-.tak-board.size-5 .tak-square {
-	width: 20%;
-	height: 20%;
-}
-.tak-board.size-4 .tak-square {
-	width: 25%;
-	height: 25%;
-}
-.tak-board.size-3 .tak-square {
-	width: 33.333333333%;
-	height: 33.333333333%;
-}
+@import './board-style-1.css'
