--- a/board-style-1.css
+++ b/board-style-1.css
@@ -29,10 +29,6 @@ SILVER #DDDDDD
 		height: 1px;
 	}
 
-	.square-empty-space {
-		min-height: 1px;
-	}
-
 	.tak-square {
 		border: 6px solid $negative-space-color;
 		border-radius: 5px;
@@ -59,10 +55,41 @@ SILVER #DDDDDD
 		background-color: $x-color;
 	}
 
+	.row-count-1,
+	.row-count-2,
+	.row-count-3,
+	.row-count-4,
+	.row-count-5 {
+		height: 100%;
+		.row {
+			height: 20%;
+		}
+	}
+
+	.row-count-1 .square-spacer { height: 80%; }
+	.row-count-2 .square-spacer { height: 60%; }
+	.row-count-3 .square-spacer { height: 40%; }
+	.row-count-4 .square-spacer { height: 20%; }
+
+	.at-least-5 .square-spacer { display: none; }
+
+	.at-least-6 {
+		display: table;
+		height: 100%;
+		.tak-piece {
+			display: table-row;
+		}
+		.tak-piece:before {
+			content: " ";
+			display: table-cell;
+			width: 100%;
+		}
+	}
+
 	/* piece sizes */
 	.tak-piece {
-		height: 20%;
-		margin: 1px;
+		width: 100%;
+		font-size: 1px; /* WTF?!? */
 	}
 
 
