--- a/build.css
+++ b/build.css
@@ -39,10 +39,6 @@ SILVER #DDDDDD
 	height: 1px;
 }
 
-.tak-board-1 .square-empty-space {
-	min-height: 1px;
-}
-
 .tak-board-1 .tak-square {
 	border: 6px solid white;
 	border-radius: 5px;
@@ -72,11 +68,56 @@ SILVER #DDDDDD
 	background-color: #001F3F;
 }
 
+.tak-board-1 .row-count-1, .tak-board-1 .row-count-2, .tak-board-1 .row-count-3, .tak-board-1 .row-count-4, .tak-board-1 .row-count-5 {
+	height: 100%;
+}
+
+.tak-board-1 .row-count-1 .row, .tak-board-1 .row-count-2 .row, .tak-board-1 .row-count-3 .row, .tak-board-1 .row-count-4 .row, .tak-board-1 .row-count-5 .row {
+	height: 20%;
+}
+
+.tak-board-1 .row-count-1 .square-spacer {
+	height: 80%;
+}
+
+.tak-board-1 .row-count-2 .square-spacer {
+	height: 60%;
+}
+
+.tak-board-1 .row-count-3 .square-spacer {
+	height: 40%;
+}
+
+.tak-board-1 .row-count-4 .square-spacer {
+	height: 20%;
+}
+
+.tak-board-1 .at-least-5 .square-spacer {
+	display: none;
+}
+
+.tak-board-1 .at-least-6 {
+	display: table;
+	height: 100%;
+}
+
+.tak-board-1 .at-least-6 .tak-piece {
+	display: table-row;
+}
+
+.tak-board-1 .at-least-6 .tak-piece:before {
+	content: " ";
+	display: table-cell;
+	width: 100%;
+}
+
 /* piece sizes */
 
 .tak-board-1 .tak-piece {
-	height: 20%;
-	margin: 1px;
+	width: 100%;
+	font-size: 1px;
+
+	/* WTF?!? */
 }
 
 /* square sizes */
