--- a/board-style-1.css
+++ b/board-style-1.css
@@ -25,6 +25,10 @@ SILVER #DDDDDD
 	$o-color: #FF851B;
 	$negative-space-color: white;
 
+	$squarePaddingToTopPiece: 25%;
+	$pieceEdgeThickness: 10px;
+	$pieceEdgeBorder: 2px;
+
 	.square-pieces {
 		height: 1px;
 	}
@@ -60,39 +64,32 @@ SILVER #DDDDDD
 	.row-count-3,
 	.row-count-4,
 	.row-count-5 {
-		height: 100%;
 		.tak-piece {
 			height: 20%;
 		}
 	}
 
-	.row-count-1 .square-spacer { height: 80%; }
-	.row-count-2 .square-spacer { height: 60%; }
-	.row-count-3 .square-spacer { height: 40%; }
-	.row-count-4 .square-spacer { height: 20%; }
-
-	.at-least-5 .square-spacer { display: none; }
-
 	.at-least-6 {
-		display: table;
-		height: 100%;
 		.tak-piece {
-			display: table-row;
-		}
-		.tak-piece:before {
-			content: " ";
-			display: table-cell;
-			width: 100%;
+			flex-grow: 1;
 		}
 	}
 
 	/* piece sizes */
 	.tak-piece {
-		width: 100%;
-		font-size: 1px; /* WTF?!? */
-		margin: 2px;
+		border-top: 1px;
+		border-bottom: 1px;
+		border-left: 2px;
+		border-right: 2px;
+
+		border-style: solid;
+		border-color: $negative-space-color;
 	}
 
+	.piece-holder {
+		display: flex;
+		flex-direction: column-reverse;
+	}
 
 
 
@@ -121,10 +118,6 @@ SILVER #DDDDDD
 		width: 33.333333333%;
 		height: 33.333333333%;
 	}
-
-	$squarePaddingToTopPiece: 25%;
-	$pieceEdgeThickness: 10px;
-	$pieceEdgeBorder: 2px;
 
 	.piece-topper {
 		position: absolute;
