--- a/build.css
+++ b/build.css
@@ -130,6 +130,15 @@ SILVER #DDDDDD
 	height: calc(100% - (25% * 2));
 }
 
+.tak-board-1 .transparent {
+	background-color: white;
+	opacity: 0.7;
+}
+
+.tak-board-1 .circle .transparent {
+	border-radius: 50%;
+}
+
 .tak-board-1 .piece-topper-border {
 	position: absolute;
 	width: calc(100% - (25% * 2) + (2px * 2));
