--- a/board-style-1.css
+++ b/board-style-1.css
@@ -23,6 +23,7 @@ SILVER #DDDDDD
 
 	$x-color: #001F3F;
 	$o-color: #FF851B;
+	$highlight-color: #F012BE;
 	$negative-space-color: white;
 
 	$squarePaddingToTopPiece: 25%;
@@ -42,6 +43,12 @@ SILVER #DDDDDD
 	}
 	.tak-square.owned-by-x {
 		border-color: $x-color;
+	}
+	.tak-square.highlight {
+		border-color: $highlight-color;
+	}
+	.tak-square.can-click {
+		cursor: pointer;
 	}
 
 	.tak-row.even .tak-square.even {
@@ -94,27 +101,27 @@ SILVER #DDDDDD
 
 
 	/* square sizes */
-	.tak-board.size-8 .tak-square {
+	.size-8 .tak-square {
 		width: 12.5%;
 		height: 12.5%;
 	}
-	.tak-board.size-7 .tak-square {
+	.size-7 .tak-square {
 		width: 14.285714286%;
 		height: 14.285714286%;
 	}
-	.tak-board.size-6 .tak-square {
+	.size-6 .tak-square {
 		width: 16.666666667%;
 		height: 16.666666667%;
 	}
-	.tak-board.size-5 .tak-square {
+	.size-5 .tak-square {
 		width: 20%;
 		height: 20%;
 	}
-	.tak-board.size-4 .tak-square {
+	.size-4 .tak-square {
 		width: 25%;
 		height: 25%;
 	}
-	.tak-board.size-3 .tak-square {
+	.size-3 .tak-square {
 		width: 33.333333333%;
 		height: 33.333333333%;
 	}
